fixed the alignment of cookbooks displayed to be more central

--- a/src/components/Client/ProfileCookbook/ProfileCookbook.css
+++ b/src/components/Client/ProfileCookbook/ProfileCookbook.css
@@ -77,6 +77,7 @@
     flex-direction: column;
     padding: 15px;
     gap: 20px;
+    justify-content: center;
 }
 
 .cb-link {
